# StellarStream

./: ComponentEasy.txt  Design-SystemMedium.txt  FEATURE_IMPLEMENTATION.md  FRONTEND_INTEGRATION_GUIDE.md  GOVERNANCE_PROPOSAL_BRIDGE_PR.md  HARDWARE_WALLET_SECURITY_FEATURE.md  HARDWARE_WALLET_SECURITY_PR.md  IMPLEMENTATION_COMPLETE.txt  PR_DESCRIPTION.md  PR_DESCRIPTION_679.txt  PR_DESCRIPTION_689.md  PR_DESCRIPTION_689.txt  PR_DESCRIPTION_AFFILIATE_PORTAL.md  PR_DESCRIPTION_ASSET_MAPPING.md  PR_DESCRIPTION_CLOSES_70.md  PR_DESCRIPTION_SPLIT_TICKER.md  TypographyEasy.txt  UX-FlowMedium.txt  UX-Prototy peHard.txt  Uiassetspe  dataviz.txt  package-lock.json  package.json  uidesignmedium.txt
contracts/Contract-V2/: Cargo.toml  Makefile  contract-metadata.json
contracts/Contract-V2/src/: contracterror.rs  errors.rs  lib.rs  math.rs  storage.rs  test.rs  types.rs  v1_interface.rs  v1_to_v2_integration_test.rs
contracts/Contract-V2/test_snapshots/reentrancy/: invariant_cannot_migrate_same_stream_twice.1.json
contracts/Contract-V2/test_snapshots/test/: test_admin_can_manage_asset_whitelist.1.json  test_bump_active_streams_ttl_returns_count_of_existing.1.json  test_cliff_period_locks_funds.1.json  test_create_batch_streams_atomic_failure.1.json  test_create_batch_streams_max_limit.1.json  test_create_batch_streams_success.1.json  test_create_stream_deducts_protocol_fee_to_treasury.1.json  test_create_stream_fails_for_non_whitelisted_asset.1.json  test_create_stream_with_fee_requires_treasury.1.json  test_geometric_rate_unlock_math.1.json  test_get_active_volume_after_partial_withdrawal.1.json  test_get_active_volume_excludes_cancelled_streams.1.json  test_get_active_volume_mixed_roles.1.json  test_get_active_volume_multiple_streams.1.json  test_get_active_volume_single_stream_as_sender.1.json  test_get_active_volume_unrelated_user_returns_zero.1.json  test_get_v2_protocol_health_updates_correctly.1.json  test_migrate_stream_calls_v1_cancel.1.json  test_migrate_stream_creates_v2_stream.1.json  test_migrate_stream_remaining_balance_correct_at_25_percent.1.json  test_permit_stream_fails_if_deadline_passed.1.json  (+6 more)
contracts/Contract-V2/tests/: cross_contract.rs
contracts/splitter-factory/: Cargo.toml  FACTORY_GUIDE.md  PR_DESCRIPTION.md
contracts/splitter-factory/src/: lib.rs  test.rs  types.rs
contracts/splitter-v3/fuzz/: Cargo.toml
(+414 files in other folders)
